<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="title_activity_tip_calculator">Tip Calculator</string>
    <string name="menu_settings">Settings</string>

    <string name="bill_amount_label">Bill Amount</string>
    <string name="bill_amount">34.60</string>

    <string name="tip_percent_label">Percent</string>
    <string name="tip_percent">15%</string>

    <string name="tip_amount_label">Tip</string>
    <string name="tip_amount">$0.00</string>

    <string name="total_amount_label">Total</string>
    <string name="total_amount">$0.00</string>

    <string-array name="split_array">
        <item>Split the bill? - No</item>
        <item>Split the bill? - 2 ways</item>
        <item>Split the bill? - 3 ways</item>
        <item>Split the bill> - 4 ways</item>
    </string-array>
</resources>
